--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     
+    <!-- Preload Inter font for better performance -->
+    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap"></noscript>
+    
     <!-- Favicon optimizations -->
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon_0_32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon_0_16x16.png">
@@ -29,7 +33,8 @@
       body { 
         margin: 0; 
         padding: 0; 
-        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+        font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
+        font-display: swap;
         background-color: #111827; /* Dark background matching app theme */
         color: #f3f4f6;
       }
