fix: Correct Supabase URL typo in test files
The Supabase URL had a typo (ewtuefeogytgmsnkpmb instead of ewtuefzeogytgmsnkpmb)
causing DNS resolution failures and preventing login.

Fixed in:
- public/login-helper.html
- public/test-profile.html
- test-auth-flow.html

Login should now work correctly.

--- a/public/test-profile.html
+++ b/public/test-profile.html
@@ -48,7 +48,7 @@
     <script type="module">
         import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/+esm';
         
-        const supabaseUrl = 'https://ewtuefeogytgmsnkpmb.supabase.co';
+        const supabaseUrl = 'https://ewtuefzeogytgmsnkpmb.supabase.co';
         const supabaseAnonKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImV3dHVlZnplb2d5dGdtc25rcG1iIiwicm9sZSI6ImFub24iLCJpYXQiOjE3Mzc4OTQ5MjcsImV4cCI6MjA1MzQ3MDkyN30.AX7kU-PKsG1z7OE1_qVHuXaKj5EKw-Ws71Sax1gZ7GU';
         
         const supabase = createClient(supabaseUrl, supabaseAnonKey);
