--- a/packages/landing/index.html
+++ b/packages/landing/index.html
@@ -36,7 +36,7 @@
     <script>
       (function() {
         // Get theme from localStorage or system preference
-        const savedTheme = localStorage.getItem('theme');
+        const savedTheme = localStorage.getItem('theme-preference');
         const systemTheme = window.matchMedia('(prefers-color-scheme: dark)').matches ? 'dark' : 'light';
         const theme = savedTheme || systemTheme;
 
