--- a/pricing_strategy_presentation.html
+++ b/pricing_strategy_presentation.html
@@ -359,10 +359,11 @@
             <span class="px-3 py-1 rounded-full bg-purple-500/10 text-purple-400 text-xs font-semibold border border-purple-500/20">TEAMS</span>
           </div>
           <h3 class="text-2xl font-bold text-white mb-2">Team</h3>
-          <div class="flex items-baseline gap-1 mb-4">
-            <span class="text-4xl font-bold text-white">£79</span>
-            <span class="text-gray-400">/user/mo</span>
+          <div class="flex items-baseline gap-1 mb-2">
+            <span class="text-4xl font-bold text-white">£78</span>
+            <span class="text-gray-400">/mo</span>
           </div>
+          <p class="text-xs text-blue-400 mb-4">Includes 2 seats • £39/seat after</p>
           <p class="text-sm text-gray-400 mb-6">Collaboration at scale</p>
           <ul class="space-y-3 text-sm text-gray-300 flex-grow">
             <li class="flex items-center gap-2">
@@ -383,7 +384,7 @@
             </li>
           </ul>
           <div class="mt-6 pt-4 border-t border-gray-700/50">
-            <div class="text-xs text-gray-500">Cost: <span class="text-white">£12</span> • Margin: <span class="text-emerald-400 font-semibold">84.8%</span></div>
+            <div class="text-xs text-gray-500">Cost: <span class="text-white">£8/seat</span> • Margin: <span class="text-emerald-400 font-semibold">79.5%</span></div>
           </div>
         </div>
       </div>
@@ -816,8 +817,8 @@
       <!-- Key Numbers Summary -->
       <div class="grid grid-cols-2 md:grid-cols-4 gap-4 mb-12">
         <div class="glassmorphism-card rounded-2xl p-6 text-center">
-          <p class="text-3xl font-bold gradient-text number-highlight">£29-79</p>
-          <p class="text-sm text-gray-400">Price Range</p>
+          <p class="text-3xl font-bold gradient-text number-highlight">£29-49</p>
+          <p class="text-sm text-gray-400">Solo/Pro Price</p>
         </div>
         <div class="glassmorphism-card rounded-2xl p-6 text-center">
           <p class="text-3xl font-bold text-emerald-400 number-highlight">84%</p>
