fix: remove logo image from email templates
Logo was not loading in Supabase emails due to email client
restrictions. Simplified to text-only branding for now.

--- a/supabase/email-templates/confirmation.html
+++ b/supabase/email-templates/confirmation.html
@@ -38,13 +38,7 @@
           <!-- Logo Section -->
           <tr>
             <td align="center" style="padding: 40px 40px 24px 40px; background-color: #ffffff;">
-              <!-- Logo with alt text fallback -->
-              <img src="https://res.cloudinary.com/sixty-seconds/image/upload/sixtyseconds-Icon_1_2_cybz4p.png" 
-                   alt="use60" 
-                   width="64" 
-                   height="64" 
-                   style="display: block; border: 0; border-radius: 14px; background-color: #18181b;" />
-              <h1 style="margin: 16px 0 0 0; font-size: 26px; font-weight: 700; color: #111111; letter-spacing: -0.5px;">use60</h1>
+              <h1 style="margin: 0; font-size: 32px; font-weight: 700; color: #111111; letter-spacing: -0.5px;">use60</h1>
               <p style="margin: 4px 0 0 0; font-size: 14px; color: #6b7280; font-weight: 500;">AI Sales Assistant</p>
             </td>
           </tr>
