--- a/supabase/email-templates/preview.html
+++ b/supabase/email-templates/preview.html
@@ -235,7 +235,7 @@
 
   <div class="header">
     <div class="logo-section">
-      <img src="https://res.cloudinary.com/sixty-seconds/image/upload/sixtyseconds-Icon_1_2_cybz4p.png" alt="use60" id="headerLogo" />
+      <img src="https://res.cloudinary.com/sixty-seconds/image/upload/w_128,h_128,c_fill,f_png/sixtyseconds-Icon_1_2_cybz4p.png" alt="use60" id="headerLogo" />
       <div>
         <h1>use60</h1>
         <span>Email Template Preview</span>
@@ -275,14 +275,14 @@
     <div class="info-card">
       <h3>🖼️ Logo Loading Test</h3>
       <div class="logo-test">
-        <img src="https://res.cloudinary.com/sixty-seconds/image/upload/sixtyseconds-Icon_1_2_cybz4p.png" 
+        <img src="https://res.cloudinary.com/sixty-seconds/image/upload/w_128,h_128,c_fill,f_png/sixtyseconds-Icon_1_2_cybz4p.png" 
              alt="use60 Logo" 
              id="logoTest"
              onload="updateLogoStatus('loaded')"
              onerror="updateLogoStatus('error')" />
         <div class="logo-test-info">
           <h4>Cloudinary Logo URL</h4>
-          <p>https://res.cloudinary.com/sixty-seconds/image/upload/sixtyseconds-Icon_1_2_cybz4p.png</p>
+          <p>https://res.cloudinary.com/sixty-seconds/image/upload/w_128,h_128,c_fill,f_png/sixtyseconds-Icon_1_2_cybz4p.png</p>
         </div>
         <span class="logo-status loading" id="logoStatus">Loading...</span>
       </div>
