feat: add waitlist landing pages and access code system
- Add WaitlistLandingPage and WaitlistLandingPopup pages
- Implement access code validation service and hook
- Update LeaderboardLookup and WaitlistSuccess pages
- Add waitlist service enhancements and type updates
- Update styles and tailwind config
- Add design system documentation

--- a/packages/landing/index.html
+++ b/packages/landing/index.html
@@ -20,6 +20,11 @@
     <!-- Preload Inter font for better performance -->
     <link rel="preload" href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap"></noscript>
+
+    <!-- Brand Fonts: Gilroy (headings) + Source Sans Pro (body, similar to Sofia Pro) -->
+    <link rel="stylesheet" href="https://fonts.cdnfonts.com/css/gilroy-bold">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+3:wght@400;500;600&display=swap" rel="stylesheet">
     
     <!-- Favicon optimizations -->
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon_0_32x32.png">
