--- a/packages/landing/index.html
+++ b/packages/landing/index.html
@@ -34,8 +34,8 @@
     
     <!-- Meta tags for PWA -->
     <meta name="theme-color" content="#10b981">
-    <meta name="description" content="Modern sales dashboard for tracking performance and managing pipeline">
-    <meta name="keywords" content="sales, dashboard, CRM, pipeline, performance, analytics">
+    <meta name="description" content="60 is your AI sales assistant that handles follow-ups, proposals, and meeting prep so you can focus on closing deals.">
+    <meta name="keywords" content="AI sales assistant, sales automation, follow-up automation, proposal generator, meeting prep, CRM">
     
     <!-- Theme Initialization Script - MUST run before body renders -->
     <script>
@@ -129,7 +129,7 @@
       }
     </style>
 
-    <title>Sixty Sales Dashboard</title>
+    <title>60 | AI Sales Assistant</title>
   </head>
   <body>
     <div id="root"></div>
