feat: add Google Analytics (G-HYYZZLNR94)

--- a/packages/landing/index.html
+++ b/packages/landing/index.html
@@ -145,6 +145,16 @@
     fbq('track', 'PageView');
     </script>
     <!-- End Meta Pixel Code -->
+
+    <!-- Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-HYYZZLNR94"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-HYYZZLNR94');
+    </script>
+    <!-- End Google Analytics -->
   </head>
   <body>
     <!-- Meta Pixel Code - noscript fallback -->
