--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta http-equiv="Expires" content="0" />
 
     <!-- Performance Optimizations -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     
     <!-- Resource hints for performance -->
     <link rel="dns-prefetch" href="//fonts.googleapis.com">
